--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "app/index.js",
   "repository": "vporoshok/generator-vp-python",
   "author": {
-    "name": "",
-    "email": "",
+    "name": "Evgeniy Bastrykov",
+    "email": "vporoshok@gmail.com",
     "url": "https://github.com/vporoshok"
   },
   "engines": {
@@ -23,8 +23,11 @@
     "yeoman-generator"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.17.0",
+    "bitbucket-rest": "0.0.1",
     "chalk": "^0.5.0",
+    "github": "^0.2.3",
+    "ini": "^1.3.0",
+    "yeoman-generator": "^0.17.0",
     "yosay": "^0.3.0"
   },
   "devDependencies": {
