--- a/app/templates/tox.ini
+++ b/app/templates/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8,<%= py_vers.join(',') %>,coverage<% if (!setup) { %>
+envlist = flake8,<%= tox.join(',') %>,coverage<% if (!setup) { %>
 skipsdist = true<% } %>
 
 [tox:hudson]
